src/test/ui/type-alias-impl-trait/incoherent-assoc-imp-trait.stderr
error[E0119]: conflicting implementations of trait `std::ops::FnOnce<()>` for type `&_`:
  --> $DIR/incoherent-assoc-imp-trait.rs:10:1
   |
LL | impl<F> FnOnce<()> for &F {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<A, F> FnOnce<A> for &F
             where F: Fn<A>, F: ?Sized;

error[E0210]: type parameter `F` must be used as the type parameter for some local type (e.g., `MyStruct<F>`)
  --> $DIR/incoherent-assoc-imp-trait.rs:10:6
   |
LL | impl<F> FnOnce<()> for &F {
   |      ^ type parameter `F` must be used as the type parameter for some local type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0119, E0210.
For more information about an error, try `rustc --explain E0119`.
